--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.56'
+    implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
+    compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.2.0.Final'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
