--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
+    id("io.freefair.lombok") version "3.1.4"
     id 'java'
 }
 
@@ -37,6 +38,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
 }
