设置过期时间

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     cache: false
     mode: HTML5
 jwt:
-  expiration: 30 # 过期时间 单位秒
-  time-out: 60   # 超时时间 单位秒
+  expiration: 30 # 过期时间 单位分钟
+  time-out: 30   # 超时时间 单位分钟
   secret: uKd?J|tt9wE[._U+$==X?-@#NZ\,Um=@
 
