--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.56'
     implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
     compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.2.0.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
