--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /pms
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/pms?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://192.168.163.10:3306/pms?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
