--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
-    id("io.freefair.lombok") version "3.1.4"
     id 'java'
 }
 
@@ -41,4 +40,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.qiniu:qiniu-java-sdk:7.2.+'
     runtimeOnly 'mysql:mysql-connector-java'
+    annotationProcessor 'org.projectlombok:lombok:1.18.2'
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
+    testCompileOnly 'org.projectlombok:lombok:1.18.2'
 }
