--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
+    id 'net.ltgt.apt' version '0.9'
     id 'java'
 }
 
@@ -28,8 +29,9 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.56'
-    implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
-    compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.2.0.Final'
+    implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.0.Final'
+    implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.0.Final'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -40,8 +42,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.qiniu:qiniu-java-sdk:7.2.+'
     runtimeOnly 'mysql:mysql-connector-java'
-    annotationProcessor 'org.projectlombok:lombok:1.18.2'
-    compileOnly 'org.projectlombok:lombok:1.18.2'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
-    testCompileOnly 'org.projectlombok:lombok:1.18.2'
+    compile 'org.projectlombok:lombok:1.18.2'
 }
