--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
     id 'net.ltgt.apt' version '0.9'
+    id("io.freefair.lombok") version "3.1.4"
     id 'java'
 }
 
@@ -42,5 +43,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.qiniu:qiniu-java-sdk:7.2.+'
     runtimeOnly 'mysql:mysql-connector-java'
-    compile 'org.projectlombok:lombok:1.18.2'
+    //compile 'org.projectlombok:lombok:1.18.2'
 }
